--- a/ass/style/style.css
+++ b/ass/style/style.css
@@ -120,3 +120,49 @@ header {
     }
 
 }
+
+/*footer*/
+.Footer_container {
+    min-height: 500px;
+    background-color: rgb(58, 56, 56);
+    padding-bottom: 1rem;
+    padding-top: 0.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    div {
+        min-width: 230px;
+        min-height: 500px;
+        background-color: rgb(30, 157, 226);
+    }
+
+    .special_footer {
+        background-color: pink;
+        width: 300px;
+    }
+}
+
+.bottom_container {
+    height: 100px;
+    display: flex;
+    background-color: rgb(58, 56, 56);
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+
+#line {
+    min-height: 60px;
+    min-width: 1000px;
+    background-color: aquamarine;
+    display: flex;
+    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
+
+    div {
+        background-color: rgb(233, 130, 130);
+        text-align: center;
+    }
+}
